--- a/addressApexController.cls
+++ b/addressApexController.cls
@@ -12,4 +12,12 @@ public with sharing class addressApexController {
 
         insert addressRecord;
     }
+
+    public class AddressWrapper {
+        public String street;
+        public String city;
+        public String state;
+        public String zipCode;
+    }
+
 }
